[gd_scene load_steps=7 format=3 uid="uid://ds78l7tjtcjr4"]

[ext_resource type="Script" path="res://essaim_robot/tree_script.gd" id="1_ki62n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7nlum"]
size = Vector3(10, 10, 10)

[sub_resource type="PrismMesh" id="PrismMesh_ieixx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxxig"]
albedo_color = Color(0, 0.45098, 0.0352941, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_4d0ge"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i5c1d"]
albedo_color = Color(1, 0.498039, 0.0235294, 1)

[node name="Tree" type="RigidBody3D" groups=["tree"]]
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ki62n")
metadata/withered = 1
metadata/need_fertilizer = 1
metadata/infected = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.46, 0, 0, 0, 1.46, 0, 0, 0, 1.46, 0, 1.7, 0)
shape = SubResource("BoxShape3D_7nlum")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.351, 0, 0, 0, 1, 0, 0.233011, 0)
mesh = SubResource("PrismMesh_ieixx")
surface_material_override/0 = SubResource("StandardMaterial3D_rxxig")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="." groups=["tree"]]
transform = Transform3D(1.46, 0, 0, 0, 0.511543, 0, 0, 0, 1.46, 0, -0.198279, 0)
mesh = SubResource("PrismMesh_ieixx")
surface_material_override/0 = SubResource("StandardMaterial3D_rxxig")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.45, 0, 0, 0, 0.757859, 0, 0, 0, 0.45, 0, -1.17152, 0)
mesh = SubResource("CylinderMesh_4d0ge")
surface_material_override/0 = SubResource("StandardMaterial3D_i5c1d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
